# Sodium

./: .gitignore  CMakeLists.txt  README.md  Refine_DefMap.cpp  config_indi.cpp  eegg.cpp  gear_simulator.cpp  guider.cpp  lightguider.appdata.xml  lightguider.desktop  messages.po  nudge_lock.cpp  parallelports.h  phd.cpp  phd.h  phdconfig.cpp  rotator.cpp  sodium.appdata.xml  sodium.desktop  worker_thread.cpp
.github/workflows/: cmake.yml
ao/: gear_simulator.cpp  stepguider.cpp
camera/: cam_indi.cpp  camera.cpp  cameras.h
client/: client.cpp  guider.cpp  guider.hpp  guider.py  lightguiderclient.py  logger.py  phd2client.py  simple.py
cmake_modules/: FindCFITSIO.cmake  FindINDI.cmake  LightGuiderBuildDoc.cmake  LightGuiderGenerateDocScript.cmake  LightGuiderPackaging.cmake  LightGuiderRemovegettextwarning.cmake  SodiumBuildDoc.cmake  SodiumGenerateDocScript.cmake  SodiumPackaging.cmake  SodiumRemovegettextwarning.cmake  compiler_options.cmake  thirdparty.cmake
contributions/MPI_IS_gaussian_process/: CMakeLists.txt
doc/: index.md  profile.md  test.phd
doc/help/: Advanced_settings.htm  Basic_use.htm  Darks_BadPixel_Maps.htm  Glossary.html  Guide_algorithms.htm  Introduction.htm  KeyboardShortcuts.htm  LightGuiderGuideHelp.hhc  LightGuiderGuideHelp.hhp  MainScreen.htm  SodiumGuideHelp.hhc  SodiumGuideHelp.hhp  Supplemental_Info.htm  Tools.htm  Trouble_shooting.htm  Tutorials.htm  Visualization.htm
gui/: about_dialog.cpp  calreview_dialog.cpp  darks_dialog.cpp  darks_dialog.h  myframe.cpp  myframe_events.cpp
libs/: CMakeLists.txt
libs/lua/: CMakeLists.txt
libs/quickjs/: quickjspp.hpp
locale/: messages.pot
locale/zh_CN/: messages.po
locale/zh_TW/: messages.po
logviewer/: CMakeLists.txt
modules/: CMakeLists.txt
modules/arduino/: CMakeLists.txt  arduino.cpp
modules/imgplugin/: CMakeLists.txt  image.cpp
modules/luascript/: download.lua
modules/platesolver/: CMakeLists.txt  solver.cpp
modules/scriptrunner/: info.json
modules/ssh/: CMakeLists.txt  ssh.cpp  ssh.hpp  webssh.cpp
modules/webserver/: CMakeLists.txt  app.cpp  app.h  http.h  info.json  url.h
rotator/: rotator.cpp  rotators.h
script/: list_dir.sh  rename.sh  update_locale.sh
server/: event_server.cpp  socket_server.cpp
src/: circbuf.h  controller.cpp  controller.h  controller.hpp  guider.cpp  guiders.h  guiding_stats.cpp  guiding_stats.h  lightconfig.cpp  lightconfig.h  lightcontrol.cpp  lightcontrol.h  lightguider.cpp  lightguider.h  macro.hpp  messages.po  onboard_st4.cpp  phdconfig.cpp  phdcontrol.cpp  phdcontrol.h  phdupdate.cpp  phdupdate.h  precompiled_header.h  serialport.cpp  serialport_posix.cpp  serialports.h  sodium.cpp  sodium.h  sodium.hpp  star.cpp  star.h  worker_thread.cpp  worker_thread.h  zfilterfactory.cpp
src/algorithm/: backlash_comp.cpp  backlash_comp.h  backlash_comp.hpp  guide_algorithm.cpp  guide_algorithm.h  guide_algorithm.hpp  guide_algorithm_gaussian_process.cpp  guide_algorithm_gaussian_process.h  guide_algorithm_gaussian_process.hpp  guide_algorithm_hysteresis.cpp  guide_algorithm_hysteresis.h  guide_algorithm_hysteresis.hpp  guide_algorithm_identity.cpp  guide_algorithm_identity.h  guide_algorithm_identity.hpp  guide_algorithm_lowpass.cpp  guide_algorithm_lowpass.h  guide_algorithm_lowpass.hpp  guide_algorithm_lowpass2.cpp  guide_algorithm_lowpass2.h  guide_algorithm_lowpass2.hpp  guide_algorithm_resistswitch.cpp  guide_algorithm_resistswitch.h  guide_algorithm_resistswitch.hpp  guide_algorithm_zfilter.cpp  guide_algorithm_zfilter.h  guide_algorithm_zfilter.hpp  guide_algorithms.h  guide_algorithms.hpp  guider_multistar.cpp  guider_multistar.h  zfilterfactory.cpp  zfilterfactory.h  zfilterfactory.hpp
src/ao/: gear_simulator.cpp  gear_simulator.h  gear_simulator.hpp  stepguider.cpp  stepguider.h  stepguider.hpp  stepguider_sbigao_indi.cpp  stepguider_sbigao_indi.h  stepguider_sbigao_indi.hpp  stepguider_sxao.cpp  stepguider_sxao.h  stepguider_sxao_indi.cpp  stepguider_sxao_indi.h  stepguider_sxao_indi.hpp  stepguiders.h  stepguiders.hpp
src/camera/: cam_ascom.cpp  cam_ascom.h  cam_ascom.hpp  cam_ascom_patch.cpp  cam_indi.cpp  cam_indi.h  cam_indi.hpp  cam_qhy.cpp  cam_qhy.h  cam_qhy5.cpp  cam_qhy5.h  cam_touptek.cpp  cam_touptek.h  cam_zwo.cpp  cam_zwo.h  camera.cpp  camera.h  camera.hpp  cameras.h  cameras.hpp
src/config/: config.cpp  config.h  config.hpp
src/device/: onboard_st4.cpp  onboard_st4.h  onboard_st4.hpp  serialport.cpp  serialport.h  serialport.hpp  serialport_loopback.cpp  serialport_loopback.h  serialport_loopback.hpp  serialport_mac.cpp  serialport_mac.h  serialport_mac.hpp  serialport_posix.cpp  serialport_posix.h  serialport_posix.hpp  serialport_win32.cpp  serialport_win32.h  serialport_win32.hpp  serialports.h  serialports.hpp
src/gui/: LightGuiderDeviceDialog.cpp  LightGuiderDeviceDialog.h  LightGuiderDeviceDialogBase.cpp  LightGuiderDeviceDialogBase.h  Refine_DefMap.cpp  Refine_DefMap.h  Refine_DefMap.hpp  SodiumDeviceDialog.cpp  SodiumDeviceDialog.hpp  SodiumDeviceDialogBase.cpp  about_dialog.cpp  about_dialog.h  about_dialog.hpp  advanced_dialog.cpp  advanced_dialog.h  advanced_dialog.hpp  aui_controls.cpp  aui_controls.h  aui_controls.hpp  calibration_assistant.cpp  calibration_assistant.h  calibration_assistant.hpp  calreview_dialog.cpp  calreview_dialog.h  calreview_dialog.hpp  calstep_dialog.cpp  calstep_dialog.h  calstep_dialog.hpp  camcal_import_dialog.cpp  camcal_import_dialog.h  camcal_import_dialog.hpp  comet_tool.h  (+97 more)
src/logviewer/: AnalysisWin.cpp  AnalysisWin.h  CMakeLists.txt  LogViewApp.cpp  LogViewApp.h  LogViewFrame.cpp  LogViewFrame.h  LogViewFrameBase.cpp  LogViewFrameBase.h  guiderlogviewer.desktop  logparser.cpp  logparser.h
src/server/web/: CMakeLists.txt
src/web/: CMakeLists.txt  tmp_TinyWeb.conf
src/web/tiny_base/: CMakeLists.txt  log.h
src/web/tiny_core/: CMakeLists.txt
src/web/tiny_http/: CMakeLists.txt  http.h
src/web/tiny_struct/: CMakeLists.txt
telescope/: mount.cpp  mount.h  scope.cpp
tools/: guiding_assistant.cpp
websrc/: CMakeLists.txt  app  app.cpp  app.h  url.h  ws.h
(+233 files in other folders)
